@@ -37,7 +37,6 @@ import org.apache.kafka.streams.state.ValueTimestampHeaders;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
 import java.util.Set;
 
 public class SubscriptionReceiveProcessorSupplier<KLeft, KRight>
@@ -56,7 +55,7 @@ public class SubscriptionReceiveProcessorSupplier<KLeft, KRight>
 
     @Override
     public Set<StoreBuilder<?>> stores() {
-        return Collections.singleton(new FactoryWrappingStoreBuilder<>(subscriptionStoreFactory));
+        return Set.of(new FactoryWrappingStoreBuilder<>(subscriptionStoreFactory));
     }
 
     @Override
