@@ -325,14 +325,14 @@ public class GlobalStateManagerImpl implements GlobalStateManager {
         for (final TopicPartition topicPartition : storeMetadata.changelogPartitions) {
             long currentDeadline = NO_DEADLINE;
 
-            globalConsumer.assign(Collections.singletonList(topicPartition));
+            globalConsumer.assign(List.of(topicPartition));
             long offset;
             final Long checkpoint = currentOffsets.get(topicPartition);
             if (checkpoint != null) {
                 globalConsumer.seek(topicPartition, checkpoint);
                 offset = checkpoint;
             } else {
-                globalConsumer.seekToBeginning(Collections.singletonList(topicPartition));
+                globalConsumer.seekToBeginning(List.of(topicPartition));
                 offset = getGlobalConsumerOffset(topicPartition);
             }
             final Long highWatermark = storeMetadata.highWatermarks.get(topicPartition);
@@ -467,14 +467,14 @@ public class GlobalStateManagerImpl implements GlobalStateManager {
         for (final TopicPartition topicPartition : storeMetadata.changelogPartitions) {
             long currentDeadline = NO_DEADLINE;
 
-            globalConsumer.assign(Collections.singletonList(topicPartition));
+            globalConsumer.assign(List.of(topicPartition));
             long offset;
             final Long checkpoint = currentOffsets.get(topicPartition);
             if (checkpoint != null) {
                 globalConsumer.seek(topicPartition, checkpoint);
                 offset = checkpoint;
             } else {
-                globalConsumer.seekToBeginning(Collections.singletonList(topicPartition));
+                globalConsumer.seekToBeginning(List.of(topicPartition));
                 offset = getGlobalConsumerOffset(topicPartition);
             }
 
@@ -568,6 +568,17 @@ public class GlobalStateManagerImpl implements GlobalStateManager {
         }
 
         return currentDeadlineMs;
+    }
+
+    @Override
+    public long approximateNumUncommittedBytes() {
+        long total = 0;
+        for (final Optional<StateStore> entry : globalStores.values()) {
+            if (entry.isPresent()) {
+                total += entry.get().approximateNumUncommittedBytes();
+            }
+        }
+        return total;
     }
 
     @Override
