@@ -257,6 +257,7 @@ public class StateDirectory implements AutoCloseable {
                         eosEnabled,
                         logContext,
                         this,
+                        time,
                         subTopology.storeToChangelogTopic(),
                         inputPartitions
                     );
@@ -310,6 +311,10 @@ public class StateDirectory implements AutoCloseable {
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 
+    public Map<TaskId, Long> taskOffsetSums() {
+        return Collections.unmodifiableMap(taskOffsetSums);
+    }
+
     public void updateTaskOffsets(final TaskId taskId, final Map<TopicPartition, Long> changelogOffsets) {
         if (!changelogOffsets.isEmpty()) {
             taskOffsetSums.put(taskId, sumOfChangelogOffsets(taskId, changelogOffsets));
@@ -320,7 +325,7 @@ public class StateDirectory implements AutoCloseable {
         taskOffsetSums.remove(taskId);
     }
 
-    private long sumOfChangelogOffsets(final TaskId taskId, final Map<TopicPartition, Long> changelogOffsets) {
+    static long sumOfChangelogOffsets(final TaskId taskId, final Map<TopicPartition, Long> changelogOffsets) {
         long offsetSum = 0L;
         for (final Map.Entry<TopicPartition, Long> changelogEntry : changelogOffsets.entrySet()) {
             final long offset = changelogEntry.getValue();
@@ -471,7 +476,7 @@ public class StateDirectory implements AutoCloseable {
     /**
      * Get or create the directory for the global stores.
      * @return directory for the global stores
-     * @throws ProcessorStateException if the global store directory does not exists and could not be created
+     * @throws ProcessorStateException if the global store directory does not exist and could not be created
      */
     public File globalStateDir() {
         final File dir = new File(stateDir, "global");
@@ -583,10 +588,41 @@ public class StateDirectory implements AutoCloseable {
 
         try {
             if (hasPersistentStores && stateDir.exists() && !stateDir.delete()) {
-                log.warn(
-                    String.format("%s Failed to delete state store directory of %s for it is not empty",
-                        logPrefix(), stateDir.getAbsolutePath())
-                );
+                final File[] remainingFiles = stateDir.listFiles();
+                if (remainingFiles == null) {
+                    log.warn("{} Failed to delete state store directory {}. It is not a directory, or it is inaccessible.",
+                            logPrefix(), stateDir.getAbsolutePath());
+                    return;
+                }
+
+                boolean hasProcessOrLockFiles = false;
+                boolean hasUnexpectedFiles = false;
+
+                for (final File file : remainingFiles) {
+                    final String name = file.getName();
+                    if (PROCESS_FILE_NAME.equals(name) || LOCK_FILE_NAME.equals(name)) {
+                        hasProcessOrLockFiles = true;
+                    } else {
+                        hasUnexpectedFiles = true;
+                        break;
+                    }
+                }
+                
+                if (hasProcessOrLockFiles && !hasUnexpectedFiles) {
+                    // KAFKA-10716: The processId file is persisted in the state directory to keep the
+                    // processId stable across restarts. Removing it would cause a new processId to be
+                    // generated and may lead to unnecessary task movements during rebalances.
+                    log.debug(
+                            "{} State store directory {} was not deleted because it still contains expected metadata files ({} and/or {}).",
+                            logPrefix(), stateDir.getAbsolutePath(), PROCESS_FILE_NAME, LOCK_FILE_NAME
+                    );
+                } else {
+                    log.warn(
+                            "{} Failed to fully clean up state store directory {} because unexpected files remain.",
+                            logPrefix(),
+                            stateDir.getAbsolutePath()
+                    );
+                }
             }
         } catch (final SecurityException exception) {
             log.error(
@@ -838,7 +874,7 @@ public class StateDirectory implements AutoCloseable {
 
     private List<File> listNamedTopologyDirs() {
         final File[] namedTopologyDirectories = stateDir.listFiles(f -> f.getName().startsWith("__") &&  f.getName().endsWith("__"));
-        return namedTopologyDirectories != null ? Arrays.asList(namedTopologyDirectories) : Collections.emptyList();
+        return namedTopologyDirectories != null ? Arrays.asList(namedTopologyDirectories) : List.of();
     }
 
     private String parseNamedTopologyFromDirectory(final String dirName) {
