@@ -59,8 +59,6 @@ import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static java.util.Collections.emptySet;
-
 public class TopologyMetadata {
     private Logger log;
 
@@ -138,6 +136,10 @@ public class TopologyMetadata {
     
     public ProcessingMode processingMode() {
         return processingMode;
+    }
+
+    public boolean streamsProtocolEnabled() {
+        return StreamsConfigUtils.streamsProtocolEnabled(config);
     }
 
     public long topologyVersion() {
@@ -230,7 +232,9 @@ public class TopologyMetadata {
                         log.debug("Detected that the topology is currently empty, waiting for something to process");
                         version.topologyCV.await();
                     } catch (final InterruptedException e) {
-                        log.error("StreamThread was interrupted while waiting on empty topology", e);
+                        Thread.currentThread().interrupt();
+                        log.warn("StreamThread was interrupted while waiting on empty topology", e);
+                        break;
                     }
                 }
             } finally {
@@ -392,7 +396,7 @@ public class TopologyMetadata {
     }
 
     public Set<String> namedTopologiesView() {
-        return hasNamedTopologies() ? Collections.unmodifiableSet(builders.keySet()) : emptySet();
+        return hasNamedTopologies() ? Collections.unmodifiableSet(builders.keySet()) : Set.of();
     }
 
     /**
