@@ -16,6 +16,8 @@
  */
 package org.apache.kafka.streams.state;
 
+import org.apache.kafka.common.annotation.InterfaceAudience;
+import org.apache.kafka.common.annotation.SuppressKafkaInternalApiUsage;
 import org.apache.kafka.streams.KafkaStreams;
 import org.apache.kafka.streams.StoreQueryParameters;
 import org.apache.kafka.streams.Topology;
@@ -25,7 +27,6 @@ import org.apache.kafka.streams.state.internals.CompositeReadOnlySessionStore;
 import org.apache.kafka.streams.state.internals.CompositeReadOnlyWindowStore;
 import org.apache.kafka.streams.state.internals.StateStoreProvider;
 
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -33,6 +34,7 @@ import java.util.Set;
  * These can be used with {@link KafkaStreams#store(StoreQueryParameters)}.
  * To access and query the {@link StateStore}s that are part of a {@link Topology}.
  */
+@InterfaceAudience.Public
 public final class QueryableStoreTypes {
 
     /**
@@ -145,10 +147,11 @@ public final class QueryableStoreTypes {
     public static class KeyValueStoreType<K, V> extends QueryableStoreTypeMatcher<ReadOnlyKeyValueStore<K, V>> {
 
         KeyValueStoreType() {
-            super(Collections.singleton(ReadOnlyKeyValueStore.class));
+            super(Set.of(ReadOnlyKeyValueStore.class));
         }
 
         @Override
+        @SuppressKafkaInternalApiUsage("KIP-1265: override leaks internal StateStoreProvider — pending KIP review")
         public ReadOnlyKeyValueStore<K, V> create(
             final StateStoreProvider storeProvider,
             final String storeName
@@ -172,6 +175,7 @@ public final class QueryableStoreTypes {
         }
 
         @Override
+        @SuppressKafkaInternalApiUsage("KIP-1265: override leaks internal StateStoreProvider — pending KIP review")
         public ReadOnlyKeyValueStore<K, ValueAndTimestamp<V>> create(
             final StateStoreProvider storeProvider,
             final String storeName
@@ -199,10 +203,11 @@ public final class QueryableStoreTypes {
     public static class WindowStoreType<K, V> extends QueryableStoreTypeMatcher<ReadOnlyWindowStore<K, V>> {
 
         WindowStoreType() {
-            super(Collections.singleton(ReadOnlyWindowStore.class));
+            super(Set.of(ReadOnlyWindowStore.class));
         }
 
         @Override
+        @SuppressKafkaInternalApiUsage("KIP-1265: override leaks internal StateStoreProvider — pending KIP review")
         public ReadOnlyWindowStore<K, V> create(
             final StateStoreProvider storeProvider,
             final String storeName
@@ -225,6 +230,7 @@ public final class QueryableStoreTypes {
         }
 
         @Override
+        @SuppressKafkaInternalApiUsage("KIP-1265: override leaks internal StateStoreProvider — pending KIP review")
         public ReadOnlyWindowStore<K, ValueAndTimestamp<V>> create(
             final StateStoreProvider storeProvider,
             final String storeName
@@ -252,10 +258,11 @@ public final class QueryableStoreTypes {
     public static class SessionStoreType<K, V> extends QueryableStoreTypeMatcher<ReadOnlySessionStore<K, V>> {
 
         SessionStoreType() {
-            super(Collections.singleton(ReadOnlySessionStore.class));
+            super(Set.of(ReadOnlySessionStore.class));
         }
 
         @Override
+        @SuppressKafkaInternalApiUsage("KIP-1265: override leaks internal StateStoreProvider — pending KIP review")
         public ReadOnlySessionStore<K, V> create(
             final StateStoreProvider storeProvider,
             final String storeName
